/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'java-library'
} 

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven {url = 'https://frcmaven.wpi.edu/artifactory/release/'}
}

javafx {
    version = "22.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dependencies {

    api group: 'edu.wpi.first.wpimath', name: 'wpimath-java', version: '2024.3.2'

    api group: 'edu.wpi.first.wpiutil', name: 'wpiutil-java', version: '2024.3.2'

    api group: 'edu.wpi.first.wpiunits', name: 'wpiunits-java', version: '2024.3.2'

    api group: 'edu.wpi.first.wpilibj', name: 'wpilibj-java', version: '2024.3.2'

    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'

    testImplementation 'org.mockito:mockito-core:4.0.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'io.github.mkpaz:atlantafx-base:2.0.1'

    implementation group: 'us.hebi.quickbuf', name: 'quickbuf-runtime', version: '1.3.1'

    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.1'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'

    implementation 'org.projectlombok:lombok:1.18.28' // Ensure the latest version of Lombok
    annotationProcessor 'org.projectlombok:lombok:1.18.28' // Enable annotation processing

    implementation 'net.java.dev.jna:jna:5.13.0' // Add JNA library
    implementation 'net.java.dev.jna:jna-platform:5.13.0' // Add JNA platform library
    implementation group: 'org.ini4j', name: 'ini4j', version: '0.5.4'

    
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17) // Ensure this matches your installed Java version
    }
}

application {
    // Define the main class for the application.
    mainClass = 'robot.configuration.main.App'

    applicationDefaultJvmArgs = [
        '--add-modules', 'javafx.controls,javafx.fxml',
        '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
        '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-exports', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED'
    ]
}

jar {
    manifest {
        attributes(
            'Main-Class': 'robot.configuration.main.App'
        )
    }
}
